update notebook to use data folder

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -362,14 +362,14 @@
     }
    ],
    "source": [
-    "trade = pd.read_csv(\"trade.csv\")\n",
+    "trade = pd.read_csv(\"data/trade.csv\")\n",
     "trade[\"Item\"] = trade[\"Item\"].str.lower()\n",
     "trade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "<AxesSubplot:title={'center':'Top 5 import partners'}, xlabel='Partner Countries', ylabel='Tonnes'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -695,13 +695,13 @@
        "[74 rows x 14 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "produce_total = pd.read_csv(\"produce-total.csv\")\n",
+    "produce_total = pd.read_csv(\"data/produce-total.csv\")\n",
     "produce_total"
    ]
   },
@@ -1026,7 +1026,7 @@
     }
    ],
    "source": [
-    "produce_value = pd.read_csv(\"produce-value-tons.csv\")\n",
+    "produce_value = pd.read_csv(\"data/produce-value-tons.csv\")\n",
     "produce_value"
    ]
   },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "<AxesSubplot:title={'center':'Top 5 local agricultural products'}, xlabel='Item', ylabel='Tonnes'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1388,20 +1388,20 @@
        "[474 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nutrient = pd.read_csv(\"nutrient.csv\")\n",
+    "nutrient = pd.read_csv(\"data/nutrient.csv\")\n",
     "nutrient.rename(columns={\"id\":\"nutrient_id\"}, inplace=True)\n",
     "nutrient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1556,19 +1556,19 @@
        "[50582 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "food = pd.read_csv(\"food.csv\")\n",
+    "food = pd.read_csv(\"data/food.csv\")\n",
     "food"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1686,19 +1686,19 @@
        "[130334 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "food_nutrient = pd.read_csv(\"food_nutrient.csv\")\n",
+    "food_nutrient = pd.read_csv(\"data/food_nutrient.csv\")\n",
     "food_nutrient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1925,19 +1925,19 @@
        "[10678 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "food_portion = pd.read_csv(\"food_portion.csv\")\n",
+    "food_portion = pd.read_csv(\"data/food_portion.csv\")\n",
     "food_portion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2104,7 @@
        "[136508 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2116,14 +2116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mcani\\AppData\\Local\\Temp/ipykernel_6676/2338116635.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\mcani\\AppData\\Local\\Temp/ipykernel_25332/2338116635.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2313,7 +2313,7 @@
        "[5220 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2327,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2554,7 +2554,7 @@
        "[64 rows x 8 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2810,7 @@
        "[64 rows x 11 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
        "5    Carbs   Population need  2.696158e+07"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2924,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2933,7 +2933,7 @@
        "<AxesSubplot:title={'center':'Nutrients produced locally and population needs'}, xlabel='Nutrient'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2956,7 +2956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3548,7 +3548,7 @@
        "<AxesSubplot:title={'center':'Carbs exported/imported and population need'}, xlabel='Element'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3575,7 +3575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3584,7 @@
        "<AxesSubplot:title={'center':'Nutrients available in the country'}, xlabel='Nutrient'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
